--- a/static/index.html
+++ b/static/index.html
@@ -47,12 +47,11 @@
             </div>
             <div id="paste_section">
                 <div class="divider">ή κάνε copy-paste κατευθείαν από κείμενο!</div>
-                <label for="pasteArea">Paste table data here</label>
                 <div id="pasteArea"
                     class="paste-area"
                     contenteditable="true"></div>
-                <button id="processButton"
-                    class="browse-btn">Process Pasted Data</button>
+                <!-- <button id="processButton"
+                    class="browse-btn">Process Pasted Data</button> -->
                 <div id="tableContainer"
                     class="table-container"></div> 
                 <div id="uploadStatus"
